	  Patch from Terry Burton.  #3045.
	* Add example stored procedure for IP Pools in MySQL.
	  See mods-config/sql/ippool/mysql/procedure.sql
	  Patch from Terry Burton.  #3048.
	* Update dictionary.dhcp dictionary with the recent hardware types.
	* Add experimental rlm_python3.  This should largely work the same
	  as rlm_python, which was Python2 only.

	Bug fixes
	* Allow listen.ipaddr to reference an IPv6-only host.  Fixes #2627.
	* ERX-Acct-Request-Reason is "integer".  Closes #2635.
	* Fix a slow memory leak in the file management code.
	* Try to fix file permissions if they get modified while
	  the server is running.
	* Fix slow memory leak with clients.
	* Fix request and connection timeouts in rlm_rest.
	* Fix systemd issues.  Patches from Daniele Rondina.
	* Fixes from clang analyzer.
	* Fix missing include for the dictionaries: alcatel.esam,
	  altiga,alvarion.wimax.v2_2,aptis,asn,audiocodes,avaya,bristol,
	  columbia_university,freedhcp,garderos,infoblox,motorola.illegal,
	  starent.vsa1, telkom, wimax.wichorus.
	* Fix internal sanity check when running with "-Xx"
	* Allow "inner-tunnel" virtual servers to work better with
	  "accept" and "reject" policies.
	* Fix dictionary.huawei data types for Huawei-DNS-Server-IPv6-address
	  and Huawei-Framed-IPv6-Address.  Fixes #2803
	* Framed-Interface-ID in postgresql/queries.conf is string, not inet
	  Fixes #2817.
	* Fix rlm_cache to complain on unknown attributes in the
	  "update" section of its configuration.
	* Add configure checks for -latomic.  This helps on armel, mips
	  and mipsel.  Fixes #2828.
	* Add support to Oracle 19 and 18. Via #2857
	* Add support for decoding tags in rlm_rest.  Fixes #2848.
	* Use correct passwords when updating CRLs in raddb/certs/
	* Properly separate "originate-coa" packets when accounting packets
	  are read from the detail file reader.
	* Use the correct virtual server for pre/post-proxy.

FreeRADIUS 3.0.19 Wed 10 Apr 2019 09:00:00 EDT urgency=high
	Feature improvements